Efecto de botón pulsado

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/button"
         android:layout_width="215dp"
         android:layout_height="140dp"
-        android:background="@drawable/playbuttonbox"
+        android:background="@drawable/pressed_play_button_effect"
         android:fontFamily="@font/bungee"
         android:onClick="Jugar"
         android:textAlignment="center"
@@ -30,7 +30,7 @@
         android:id="@+id/button3"
         android:layout_width="215dp"
         android:layout_height="140dp"
-        android:background="@drawable/exitbuttonbox"
+        android:background="@drawable/pressed_exit_button_effect"
         android:fontFamily="@font/bungee"
         android:gravity="center"
         android:onClick="Salir"
