--- a/app/src/main/res/layout/activity_pregunta.xml
+++ b/app/src/main/res/layout/activity_pregunta.xml
@@ -4,22 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/triviabg"
+    android:background="@drawable/questionbg"
     tools:context=".Pregunta">
 
-  <TextView
-      android:id="@+id/textView3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:fontFamily="@font/bungee"
-      android:text="@string/pregunta1"
-      android:textAlignment="center"
-      android:textSize="34dp"
+  <androidx.cardview.widget.CardView
+      android:layout_width="410dp"
+      android:layout_height="269dp"
+      app:cardBackgroundColor="#00FFFFFF"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.108" />
+      app:layout_constraintVertical_bias="0.04000002">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/questionbox" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="335dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/bungee"
+        android:text="@string/pregunta1"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="29sp"
+        android:translationX="20dp"
+        android:translationY="5dp" />
+
+  </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
